force-app/main/default/objects/Supplier__c/Supplier__c.object-meta.xml
<CustomObject>
    <label>Supplier</label>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>