force-app/main/default/objects/Supplier__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <label>Audit #</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>