force-app/main/default/objects/Supplier__c/fields/Component_Service__c.field-meta.xml
<CustomField>
    <fullName>Component_Service__c</fullName>
    <label>Component(s)/Service(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>